<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Vista.AperturaHistoriaFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/txtPaciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/aperturar_historia_clinica"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/cbnn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nn"
                    app:layout_constraintBottom_toBottomOf="@+id/txtPaciente"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtPaciente"
                    app:layout_constraintTop_toTopOf="@+id/txtPaciente" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintNN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPaciente">

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent=".8">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:text="@string/nombres" />

                        <EditText
                            android:id="@+id/txtnombres"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:autofillHints=""
                            android:hint="@string/espacio"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                        app:layout_constraintWidth_percent=".8">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:text="@string/apellidos" />

                        <EditText
                            android:id="@+id/txtapellidos"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:autofillHints=""
                            android:hint="@string/espacio"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearEdad"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                        app:layout_constraintWidth_percent=".8">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:text="@string/celular" />

                        <EditText
                            android:id="@+id/txtcelular"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:autofillHints=""
                            android:hint="@string/espacio"
                            android:inputType="number"
                            android:maxLength="9" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearEdad"
                        app:layout_constraintWidth_percent=".8">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:text="@string/dni" />

                        <EditText
                            android:id="@+id/txtdni"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:autofillHints=""
                            android:hint="@string/espacio"
                            android:inputType="number"
                            android:maxLength="8" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout7"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
                        app:layout_constraintWidth_percent=".8">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:text="@string/direccion" />

                        <EditText
                            android:id="@+id/txtdireccion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:autofillHints=" "
                            android:hint="@string/espacio"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout9"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
                        app:layout_constraintWidth_percent=".8">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:text="@string/nombre_padre" />

                        <EditText
                            android:id="@+id/txtpadre"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:autofillHints=""
                            android:hint="@string/espacio"
                            android:inputType="text" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
                        app:layout_constraintWidth_percent=".8">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:text="@string/nombre_madre" />

                        <EditText
                            android:id="@+id/txtmadre"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:autofillHints=""
                            android:hint="@string/espacio"
                            android:inputType="text" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/linearLayout11"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                        app:layout_constraintWidth_percent=".8">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:text="@string/lugar_nacimiento" />

                        <Spinner
                            android:id="@+id/spnlugarnacimiento"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:entries="@array/departamentos"
                            android:layout_weight="5" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/linearLayout13"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
                        app:layout_constraintWidth_percent=".8">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:text="@string/fecha_nacimiento" />

                        <EditText
                            android:id="@+id/txtfechaNacimiento"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:autofillHints=""
                            android:focusable="false"
                            android:hint="@string/espacio"
                            android:inputType="text" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/linearLayout15"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintNN"
                    app:layout_constraintWidth_percent=".8">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:text="@string/sexo" />

                    <RadioGroup
                        android:id="@+id/group"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbhombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:text="@string/m"
                            android:layout_marginEnd="15dp" />

                        <RadioButton
                            android:id="@+id/rbmujer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/f" />

                    </RadioGroup>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout156"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout15"
                    app:layout_constraintWidth_percent=".8">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center_vertical"
                        android:layout_weight="5"
                        android:text="@string/observaciones" />

                    <EditText
                        android:id="@+id/txtobservaciones"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/espacio"
                        android:inputType="text" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnregistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/registrar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout156" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>